--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,12 +27,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: Coverage
-            command: coverage run manage.py test && codecov -X gcov
           - name: Debug mode
-            command: python manage.py test --debug-mode
+            command: python3 manage.py test --debug-mode
           - name: Reverse order
-            command: python manage.py test --reverse
+            command: python3 manage.py test --reverse
 
     name: ${{ matrix.name }}
 
