Update requirements and add coverage

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - name: Coverage
+            command: coverage run manage.py test && codecov -X gcov
           - name: Debug mode
             command: python3 manage.py test --debug-mode
           - name: Reverse order
