--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,11 +39,18 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+            node-version: '14'
+      - run: npm install
+      - run: npm test
       - name: Cache node_modules
         uses: actions/cache@v2
         with:
             path: '**/node_modules'
             key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Install yarn packages
+        run: yarn install
       - name: Install dependencies
         run: pip install -r requirements-test.txt
       - name: Add localsettings
