--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+      - name: Add package.json
+        run: cp _1327/static/package.json /
       - uses: borales/actions-yarn@v2.0.0
         with:
             cmd: install # will run `yarn install` command
