--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,14 +39,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Add package.json
-        run: cp _1327/static/package.json /github/workspace
       - uses: borales/actions-yarn@v2.0.0
         with:
-            cmd: install # will run `yarn install` command
+            cmd: install --cwd _1327/static/
       - uses: borales/actions-yarn@v2.0.0
         with:
-            cmd: build # will run `yarn build` command
+            cmd: build --cwd _1327/static/
       - name: Install dependencies
         run: pip install -r requirements-test.txt
       - name: Add localsettings
