--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,12 +39,10 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-            cmd: install --cwd _1327/static/
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-            cmd: build --cwd _1327/static/
+      - name: Install yarn
+        run: sudo apt-get -q install -y yarn
+      - name: Install yarn dependencies
+        run: yarn --no-bin-links --cwd _1327/static/
       - name: Install dependencies
         run: pip install -r requirements-test.txt
       - name: Add localsettings
