--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Install yarn
-        run: sudo apt-get -q install -y yarn
+        run: apt-get -q install -y yarn
       - name: Install yarn dependencies
         run: yarn --no-bin-links --cwd _1327/static/
       - name: Install dependencies
