--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,10 +40,9 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
       - name: Install yarn
-        run: |
-            curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-            echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-            apt-get -q install -y yarn
+        run: curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+      - run: echo "deb https://dl.yarnpkg.com/debian/ stable main" >> /etc/apt/sources.list.d/yarn.list
+      - run: apt-get -q install -y yarn
       - name: Install yarn dependencies
         run: yarn --no-bin-links --cwd _1327/static/
       - name: Install dependencies
