--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,7 +43,9 @@ jobs:
         run: curl -s https://dl.yarnpkg.com/debian/pubkey.gpg -o yarnpkg.gpg
       - run: apt-key add yarnpkg.gpg
       - run: echo "deb https://dl.yarnpkg.com/debian/ stable main" >> /etc/apt/sources.list.d/yarn.list
-      - run: apt-get -q install -y yarn
+      - run: |
+          apt-get update
+          apt-get -q install -y yarn
       - name: Install yarn dependencies
         run: yarn --no-bin-links --cwd _1327/static/
       - name: Install dependencies
